force-app/main/default/objects/PWChrono_Employee_Promotion__c/PWChrono_Employee_Promotion__c.object-meta.xml
<CustomObject>
    <label>Employee Promotion</label>
    <nameField>
        <displayFormat>PROMO-{0000}</displayFormat>
        <label>Promotion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>