force-app/main/default/objects/PWChrono_Employee_Promotion__c/fields/Current_Department__c.field-meta.xml
<CustomField>
    <fullName>Current_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Department</label>
    <referenceTo>PWChrono_Department__c</referenceTo>
    <relationshipLabel>Current Department Promotions</relationshipLabel>
    <relationshipName>PWChrono_Promotions_Current_Dept</relationshipName>
    <type>Lookup</type>
</CustomField>