force-app/main/default/objects/PWChrono_Employee_Promotion__c/fields/Current_Designation__c.field-meta.xml
<CustomField>
    <fullName>Current_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Designation</label>
    <referenceTo>PWChrono_Designation__c</referenceTo>
    <relationshipLabel>Current Designation Promotions</relationshipLabel>
    <relationshipName>PWChrono_Promotions_Current_Desig</relationshipName>
    <type>Lookup</type>
</CustomField>