force-app/main/default/objects/PWChrono_Employee_Promotion__c/fields/Current_Grade__c.field-meta.xml
<CustomField>
    <fullName>Current_Grade__c</fullName>
    <label>Current Grade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>