force-app/main/default/objects/PWChrono_Employee_Promotion__c/fields/Current_Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Current_Reports_To__c</fullName>
    <label>Current Reports To</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Current Reports To Promotions</relationshipLabel>
    <relationshipName>PWChrono_Promotions_Current_Mgr</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>