force-app/main/default/objects/PWChrono_Employee_Promotion__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Employee Promotions</relationshipLabel>
    <relationshipName>PWChrono_Employee_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>