force-app/main/default/objects/PWChrono_Employee_Promotion__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>