force-app/main/default/objects/PWChrono_Employee_Promotion__c/fields/New_Branch__c.field-meta.xml
<CustomField>
    <fullName>New_Branch__c</fullName>
    <label>New Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>