force-app/main/default/objects/PWChrono_Employee_Promotion__c/fields/New_Department__c.field-meta.xml
<CustomField>
    <fullName>New_Department__c</fullName>
    <label>New Department</label>
    <referenceTo>PWChrono_Department__c</referenceTo>
    <relationshipLabel>New Department Promotions</relationshipLabel>
    <relationshipName>PWChrono_Promotions_New_Dept</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>