force-app/main/default/objects/PWChrono_Employee_Promotion__c/fields/New_Designation__c.field-meta.xml
<CustomField>
    <fullName>New_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Designation</label>
    <referenceTo>PWChrono_Designation__c</referenceTo>
    <relationshipLabel>New Designation Promotions</relationshipLabel>
    <relationshipName>PWChrono_Promotions_New_Desig</relationshipName>
    <type>Lookup</type>
</CustomField>