force-app/main/default/objects/PWChrono_Employee_Promotion__c/fields/New_Grade__c.field-meta.xml
<CustomField>
    <fullName>New_Grade__c</fullName>
    <label>New Grade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>