force-app/main/default/objects/PWChrono_Employee_Promotion__c/fields/Promotion_Details__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Details__c</fullName>
    <label>Promotion Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>